--- a/index.html
+++ b/index.html
@@ -445,9 +445,10 @@
                  logoutBtn.addEventListener('click', () => {
                     signOut(auth).then(() => {
                         window.location.reload();
-                    });
+                    }).catch(error => console.error('Logout error:', error));
                 });
             }
+
             onAuthStateChanged(auth, async (user) => {
                 const authLoader = document.getElementById('auth-loader');
                 const authView = document.getElementById('auth-view');
@@ -919,7 +920,19 @@
             });
         }
     </script>
-
+    <script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('./sw.js')
+                .then(registration => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                })
+                .catch(err => {
+                    console.log('Service Worker registration failed:', err);
+                });
+        });
+    }
+</script>
 </body>
 
 </html>
