--- a/property_rater.html
+++ b/property_rater.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TATIL Property Insurance Premium Rater</title>
     
+    <!-- PWA Manifest & Meta Tags -->
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#005f73">
     <meta name="apple-mobile-web-app-capable" content="yes">
