--- a/admin.html
+++ b/admin.html
@@ -664,7 +664,7 @@
             };
 
             try {
-                // Simply add the document. The `onReferralUpdate` Cloud Function will handle the tier logic.
+                // Simply add the document. The onReferralUpdate Cloud Function will handle the tier logic automatically.
                 await addDoc(collection(db, "referrals"), newReferral);
             } catch (error) {
                 document.getElementById('manual-entry-error').textContent = "Error adding referral.";
